--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "initials for names",
   "main": "initials.js",
   "scripts": {
-    "jshint": "jshint -c .jshintrc *.js test/*.js",
-    "test": "npm run jshint && testmate test/*.js",
+    "test": "standard *.js && testmate test/*.js",
     "test:node": "testmate --client node test/*.js",
     "test:browser": "testmate --client selenium:firefox test/*.js",
     "prepublish": "semantic-release pre",
@@ -24,6 +23,7 @@
   "devDependencies": {
     "jshint": "^2.6.0",
     "semantic-release": "^3.0.2",
+    "standard": "^3.11.1",
     "testmate": "^1.0.1"
   }
 }
