--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "initials for names",
   "main": "initials.js",
   "scripts": {
-    "test": "standard *.js && testmate test/*.js",
+    "test": "standard && testmate test/*.js",
     "test:node": "testmate --client node test/*.js",
     "test:browser": "testmate --client selenium:firefox test/*.js",
     "prepublish": "semantic-release pre",
@@ -23,7 +23,12 @@
   "devDependencies": {
     "jshint": "^2.6.0",
     "semantic-release": "^3.0.2",
-    "standard": "^3.11.1",
+    "standard": "^5.1.0",
     "testmate": "^1.0.1"
+  },
+  "standard": {
+    "ignore": [
+      "bower_components"
+    ]
   }
 }
